🔧 chore(Layout.module.scss): fix import statement to use double quotes 🔧 chore(Layout.module.scss): update media query breakpoint to tokens.$mq-1200 🔧 chore(_featuredCtaCards.scss): update flex-direction property to flex-flow with row wrap 🔧 chore(_featuredCtaCards.scss): update flex-direction property to flex-flow with row nowrap 🔧 chore(_featuredCtaCards.scss): update flex property to 0 0 100% 🔧 chore(_featuredCtaCards.scss): update flex property to 0 0 20% 🔧 chore(_featuredCtaCards.scss): update flex property to 0 1 50% 🔧 chore(_featuredCtaCards.scss): update max-width property to 90% 🔧 chore(_buttons.scss): fix import statements to use double quotes 🔧 chore(_buttons.scss): update font-size property to 1

--- a/src/styles/wpcore/_buttons.scss
+++ b/src/styles/wpcore/_buttons.scss
@@ -48,20 +48,18 @@ button {
 }
 
 .is-style-outline {
-  a {
+  background-color: transparent;
+  border-color: tokens.$c-darkGreen-800;
+  color: tokens.$c-darkGreen-800;
+
+  i,
+  &::after {
     background-color: transparent;
-    border-color: tokens.$c-darkGreen-800;
     color: tokens.$c-darkGreen-800;
+  }
 
-    i,
-    &::after {
-      background-color: transparent;
-      color: tokens.$c-darkGreen-800;
-    }
-
-    &:hover {
-      background: tokens.$c-limeGreen-200;
-    }
+  &:hover {
+    background: tokens.$c-limeGreen-200;
   }
 }
 
@@ -84,7 +82,4 @@ button {
       }
     }
   }
-}
-
-.is-style-fill {
 }
